//
// Protocol buffers definition
//
syntax = "proto3";
package pt.tecnico.rec.grpc;

message CtrlPingRequest {
  string input = 1;
}

message CtrlPingResponse {
	string output = 1;
}

message ReadRequest {
  string name = 1;
}
  
message ReadResponse {
  string value = 1;
  int32 version = 2;
  int32 cid = 3;
}

message WriteRequest {
  string name = 1;
}
  
message WriteResponse {
   string value = 1;
}

message initializeRequest{
    string abbr = 1;
    int32 docks = 2;
    int32 bikes = 3;
}

message initializeResponse{}

service RecordService {
  rpc ctrl_ping(CtrlPingRequest) returns (CtrlPingResponse);
  rpc read(ReadRequest) returns (ReadResponse);
  rpc write(WriteRequest) returns (WriteResponse);
  rpc initialize(initializeRequest) returns (initializeResponse);
}
